# whosampled-connector-mcp

./: CLAUDE_DESKTOP_CONFIG.md  FEASIBILITY.md  README.md  TESTING.md  debug_scraper.py  debug_track_details.py  debug_youtube_simple.py  debug_youtube_structure.py  example_usage.py  pyproject.toml  test_youtube_links.py
src/whosampled_connector/: __init__.py  __main__.py  scraper.py  server.py
tests/: __init__.py  conftest.py  test_e2e.py  test_scraper.py  test_server.py
